# notebooklm_clone

./: .replit  03_IMPLEMENTATION_GUIDE.md  README.md  additional_features.md  package-lock.json  package.json  replit.md
.claude/: settings.json  settings.local.json
.claude-user/: .claude.json  .claude.json.backup  .credentials.json  history.jsonl
.claude-user/debug/: 2206e273-6fc4-4426-b686-e09997b5ee1f.txt  7b621aa8-5ea0-4963-a448-8ecb8ffb31ce.txt  88e12385-6609-4045-b13c-e83e48c57660.txt  ed22f339-9b7e-49cc-b935-bc21063d5eaa.txt  latest
.claude-user/file-history/ed22f339-9b7e-49cc-b935-bc21063d5eaa/: 3b3b3acae0880f25@v1  a4bdc943f4cbafa0@v1
.claude-user/plugins/: known_marketplaces.json
.claude-user/projects/-home-runner-workspace/: 7b621aa8-5ea0-4963-a448-8ecb8ffb31ce.jsonl  88e12385-6609-4045-b13c-e83e48c57660.jsonl  ed22f339-9b7e-49cc-b935-bc21063d5eaa.jsonl  sessions-index.json
.claude-user/shell-snapshots/: snapshot-bash-1768575938827-pecwmi.sh
.claude-user/statsig/: statsig.cached.evaluations.e70596c41e  statsig.last_modified_time.evaluations  statsig.session_id.2656274335  statsig.stable_id.2656274335
.claude/skills/: implement-chat-threads.md  implement-notebook-export.md  implement-notebook-personas.md
backend/: vercel.json
backend/app/: config.py  main.py
backend/app/routers/: chat.py  export.py  studio.py  study.py  video.py
backend/app/services/: gemini.py  (+2 more)
frontend/: next.config.ts  package-lock.json  package.json
mcp-server/: .env.example  README.md  pyproject.toml
mcp-server/src/notebooklm_mcp/: __init__.py  server.py
(+23 files in other folders)
