[project]
name = "notebooklm-mcp"
version = "0.1.0"
description = "MCP server for NotebookLM Reimagined - Research intelligence tools for LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.3.0",
    "google-generativeai>=0.8.0",
    "pydantic>=2.5.0",
]

[project.scripts]
notebooklm-mcp = "notebooklm_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notebooklm_mcp"]
